<resources>
    <string name="app_name">收音机</string>
    <string name="menu_settings">设置</string>
    <string name="listening">正在收听：</string>
    <string name="is_quit_radio">确定退出收音机应用吗？</string>
    <string name="quit_alert">提示:</string>
    <string name="quit">退出</string>
    <string name="cancel">取消</string>
    <string name="default_hz">87.5</string>
    <string name="keyboard_info_default">---.--</string>
    <string name="rt">RT</string>
    <string name="ps">PS</string>
    <string name="fm1">FM1</string>
    <string name="fm2">FM2</string>
    <string name="fm3">FM3</string>
    <string name="am1">AM1</string>
    <string name="am2">AM2</string>
    <string name="mhz">MHz</string>
    <string name="khz">KHz</string>
    <string name="af">AF</string>
    <string name="tp">TP</string>
    <string name="ta">TA</string>
    <string name="pty">PTY-NONE</string>
    <string name="skip_btn">跳转</string>
    <string name="loc_btn">LOC</string>
    <string name="as_btn">自动搜索</string>
    <string name="ps_btn">搜索播放</string>
    <string name="pty_indicate_00">None</string>
    <string name="pty_indicate_01">News</string>
    <string name="pty_indicate_02">Affairs</string>
    <string name="pty_indicate_03">Info</string>
    <string name="pty_indicate_04">Sport</string>
    <string name="pty_indicate_05">Educate</string>
    <string name="pty_indicate_06">Drama</string>
    <string name="pty_indicate_07">Culture</string>
    <string name="pty_indicate_08">Science</string>
    <string name="pty_indicate_09">Varied</string>
    <string name="pty_indicate_10">Pon M</string>
    <string name="pty_indicate_11">Rock M</string>
    <string name="pty_indicate_12">Easy M</string>
    <string name="pty_indicate_13">Light M</string>
    <string name="pty_indicate_14">Clasics</string>
    <string name="pty_indicate_15">Other M</string>
    <string name="pty_indicate_16">Weather</string>
    <string name="pty_indicate_17">Finance</string>
    <string name="pty_indicate_18">Children</string>
    <string name="pty_indicate_19">Social</string>
    <string name="pty_indicate_20">Religion</string>
    <string name="pty_indicate_21">Phone IN</string>
    <string name="pty_indicate_22">Travel</string>
    <string name="pty_indicate_23">Leisure</string>
    <string name="pty_indicate_24">Jazz</string>
    <string name="pty_indicate_25">Country</string>
    <string name="pty_indicate_26">Nation M</string>
    <string name="pty_indicate_27">Oldies</string>
    <string name="pty_indicate_28">Folk M</string>
    <string name="pty_indicate_29">Document</string>
    <string name="pty_indicate_30">Test</string>
    <string name="pty_indicate_31">Alarm</string>
</resources>
